tests/NormalTests/paczka1/fuzzy1/50396954.err
Error in line 1: S677 S677 76,6
Error in line 10: S677 A540 13,5
Error in line 11: S677 S677 48,7
Error in line 20: xonH2s S677 87,6
Error in line 15: DU6myM A714 126,4
Error in line 29: n94bILCl A540 1,6
Error in line 27: S677 A714 38,5
Error in line 35: xonH2s A540 52,5
Error in line 33: S677 S677 52,2
